Dual input is fixed settings panel spacing is fixed Removed the glitch that required to click twice before you can open

--- a/src/app/components/Blocks/title/title.component.scss
+++ b/src/app/components/Blocks/title/title.component.scss
@@ -38,6 +38,6 @@
 }
 
 div {
-  margin: 0 3px 0 7px;
+  margin: 0 3px 0 3px;
 }
 
